--- a/styles_conference/assets/stylesheets/main.css
+++ b/styles_conference/assets/stylesheets/main.css
@@ -45,3 +45,26 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+
+/* --------------------------------------
+--------------------------------------
+Grid 
+--------------------------------------
+-------------------------------------- */
+
+*,*:before,*:after{
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.container{
+  margin:0 auto;
+  padding-left: 30px;
+  padding-right: 30px;
+  width: 960px;
+}
+h1,h3,h4,h5,p{
+  margin-bottom: 22px;
+}
