--- a/project/Day4/layout3/assets/stylesheet/style.css
+++ b/project/Day4/layout3/assets/stylesheet/style.css
@@ -1,15 +1,15 @@
-.main{
+.wrapper{
     margin:0 auto;
     width:80%;
 }
-.box1,.box5,.box9{
+.box1{
     width:50%;
     height:200px;
     margin:5px;
     background:#f36767;
     display:inline-block;
 }
-.box2,.box3,.box4,.box6,.box7,.box8{
+.box2{
     width:20%;
     height:200px;
     margin:5px;
