--- a/project/Day4/layout4/assets/stylesheet/style.css
+++ b/project/Day4/layout4/assets/stylesheet/style.css
@@ -18,6 +18,7 @@ body{
     border-top:20px solid blue;
     border-bottom:20px solid yellow;
     padding:20px;
+    overflow: auto;
 }
 p{
     color:white;
