--- a/styles_conference/assets/stylesheets/main.css
+++ b/styles_conference/assets/stylesheets/main.css
@@ -59,12 +59,102 @@ Grid
   box-sizing: border-box;
 }
 
-.container{
+.container,.grid{
   margin:0 auto;
+  width: 960px;
+}
+.container{
   padding-left: 30px;
   padding-right: 30px;
-  width: 960px;
 }
 h1,h3,h4,h5,p{
   margin-bottom: 22px;
+}
+.col-1-3{
+  width:33.33%;
+}
+.col-2-3{
+  width:66.66%;
+}
+.col-1-3,.col-2-3{
+  display: inline-block;
+  vertical-align: top;
+}
+.grid,.col-1-3,.col-2-3{
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+/* -------------------------------------------
+-------------------------------------------
+buttons
+-------------------------------------------
+------------------------------------------- */
+
+.btn{
+  border-radius: 5px;
+  display: inline-block;
+  margin: 0;
+}
+.btn-alt{
+  border: 1px solid #dfe2e5;
+  padding:10px 30px;
+}
+
+/*
+  ========================================
+  Primary header
+  ========================================
+*/
+
+.logo {
+  float: left;
+  border-top:4px solid #648880;
+  padding:40px 0px 22px 0px;
+}
+
+
+
+
+/* ______________________________________________
+main__________________________________________ */
+
+.hero {
+  padding: 22px 80px 66px 80px;
+}
+
+
+/*
+  ========================================
+  Clearfix
+  ========================================
+*/
+.group:before,
+.group:after {
+  content: "";
+  display: table;
+}
+.group:after {
+  clear: both;
+}
+.group {
+  clear: both;
+  *zoom: 1;
+}
+
+
+
+/*
+  ========================================
+  Primary footer
+  ========================================
+*/
+
+.primary-footer small {
+  float: left;
+}
+
+.primary-footer{
+  padding-bottom: 44px;
+  padding-top: 44px;
 }
