--- a/project/Day6/layout1/assets/stylesheet/style.css
+++ b/project/Day6/layout1/assets/stylesheet/style.css
@@ -1,12 +1,12 @@
-body{
-    width:80%;
+.wrapper{
+    width:90%;
     margin:0 auto;
 }
 section{
     margin:30px 0px;
 }
 p{
-    display: inline-block;
+    display: inline;
 }
 hr{
     width:90%;
@@ -14,13 +14,18 @@ hr{
 img,.box-s{
     height: 100px;
     width: 100px;
-    margin:5px 10px 0px 5px;
+}
+img{
+    margin-right: 10px;
 }
 .img-nomargin{
-    margin:0px;
+    margin:0px 0px -4px;
 }
-.img-margin{
-
+.margin-100{
+    margin-top:160px;
+}
+.margin-200{
+    margin-top:250px;
 }
 .image1{
     display: inline-block;
@@ -59,12 +64,13 @@ img,.box-s{
     width:80px;
     float:left;
     background:cyan;
+    margin:0px 10px 10px 0px;
 }
 .inline-box{
     display: inline-block;
     background: sandybrown;
     border: 5px solid red;
-    padding: 5px;
+    padding: 0px 5px 5px 0px;;
 }
 .box-s-clear{
     height:0px;
