--- a/project/Day6/layout6/assets/stylesheet/style.css
+++ b/project/Day6/layout6/assets/stylesheet/style.css
@@ -113,3 +113,22 @@ a{
     text-decoration: none;
     color:#444;
 }
+
+@media all and (max-width:900px){
+    .col-1-4,.col-1-2{
+        display:block;
+        text-align: center;
+        margin:0 auto;
+        padding:5px;
+    }
+    .font-col3{
+        padding: 0px;
+        font-size: 14px;
+    }
+}
+
+@media only screen and (max-width:980px) and (min-width:720px){
+    main{
+        display:none;
+    }
+}
