improve navigation bar

--- a/project/Day9/layout1/assets/stylesheet/style.css
+++ b/project/Day9/layout1/assets/stylesheet/style.css
@@ -213,7 +213,7 @@ h3{
     .para1,.para2,.para3{
         text-align: left;
     }
-    .bottom{
+    .content2{
         margin-left: 2em;
     }
 
