fixed the floating part in gallary2 item

--- a/project/Day10/layout1/assets/stylesheet/style.css
+++ b/project/Day10/layout1/assets/stylesheet/style.css
@@ -157,8 +157,11 @@ h2{
 .album-image-item{
     width:100%;
 }
-.second{
+.right{
     float:right;
+}
+.left{
+    float: left;
 }
 .album-description{
     position: relative;
