--- a/project/Day12/Layout1/assets/stylesheet/style.css
+++ b/project/Day12/Layout1/assets/stylesheet/style.css
@@ -50,23 +50,10 @@ html {
     box-sizing: border-box;
 }
 
-
-
-/* main content */
-body{
-    font-size: 16px;
-    font-family: monospace;
-    padding: 0;
-    margin:0;
-}
-.col{
-    padding: 1em;
-    margin:8px; 
-    color:turquoise;
-    text-align: center;
-}
-
-*,
+/* ======================
+	 clear fix
+	 ===================== */
+	 *,
 *:before,
 *:after{
     box-sizing: inherit;
@@ -87,11 +74,33 @@ body{
 .row:after{
     clear: both;
 }
+
+
+/* =======================
+	 grid content
+	 =======================*/
+body{
+    font-size: 16px;
+    font-family: monospace;
+    padding: 0;
+    margin:0;
+}
+.col{
+    padding: 1em;
+    margin:8px; 
+    color:turquoise;
+    text-align: center;
+}
+
 [class*='col-']{
     width: 100%;
     float:left;
     min-height:1px;
 }
+
+/* ===============================
+	 base 
+	 ================================  */
 
 a{
     text-decoration: none;
@@ -121,33 +130,23 @@ p{
     width:100%;
     margin:0 auto;
 }
-.cf:before,.cf:after{
-    content:"";
-    display: table;
-}
-.cf:after{
-    clear:both;
-}
-.cf{
-    *zoom:1;
-}
 
-/* header */
+
+/* =================
+   header
+   ==================== */
+.top{
+	position: relative;
+}
 .header{
     position: absolute;
     width: 100%;
     padding: 2rem;
 }
-.top{
-    position: relative;
-}
 .logo{
     float:left;
     color:whitesmoke;
 }
-
-
-
 .menu-box{
     float:right;
     font-size:1.2rem;
@@ -166,23 +165,21 @@ p{
 .menu-bar-item{
     display: inline-block;
 }
-
 .menu-bar{
     width:15px;
     height:3px;
     background:whitesmoke;
     margin-bottom: 2px;
 }
-
-
 .main-image-item{
     width:100%;
     height:auto;
 }
 
 
-
-/* picture-detail */
+/* =========================
+   picture-detail
+   ============================ */
 .pic-content{
     text-align: center;
     padding:2rem;
@@ -203,7 +200,9 @@ p{
 
 
 
-/* inline quote */
+/* =======================
+	 inline quote
+	 ======================= */
 .morbi-maxi-1{
     background:rgba(12, 0, 0, 0.788);
 }
@@ -225,19 +224,22 @@ p{
 }
 
 
-/* gallary */
+/* =====================
+	 gallary
+	 ===================== */
 .gallary{
     margin:1rem 0;
 }
 .gallary-image{
     border: 0.7rem solid white;
     margin-bottom:0.5rem;
-    /* box-sizing: border-box; */
 }
 
 
 
-/* footer */
+/* ======================
+	 footer
+	 ====================== */
 .media-item{
     width: 30px;
     height:30px;
@@ -247,47 +249,13 @@ p{
     text-align: center;
     padding:4rem;
 }
-footer{
-    color:white;
-}
-.foot-note{
+.footer-note{
     font-size:0.8rem;
 }
 
-@media screen and (min-width:320px){
-  .col-wd-1{width: 8.33%;}
-  .col-wd-2{width: 16.66%;}
-  .col-wd-3{width: 25%;}
-  .col-wd-4{width: 33.33%;}
-  .col-wd-5{width: 41.66%;}
-  .col-wd-6{width: 50%;}
-  .col-wd-7{width: 58.33%;}
-  .col-wd-8{width: 66.66%;}
-  .col-wd-9{width: 75%;}
-  .col-wd-10{width: 83.33%;}
-  .col-wd-11{width: 91.66%;}
-  .col-wd-12{width: 100%;} 
-}
-
-
-
-
-@media screen and (min-width:640px){
-  .col-md-1{width: 8.33%;}
-  .col-md-2{width: 16.66%;}
-  .col-md-3{width: 25%;}
-  .col-md-4{width: 33.33%;}
-  .col-md-5{width: 41.66%;}
-  .col-md-6{width: 50%;}
-  .col-md-7{width: 58.33%;}
-  .col-md-8{width: 66.66%;}
-  .col-md-9{width: 75%;}
-  .col-md-10{width: 83.33%;}
-  .col-md-11{width: 91.66%;}
-  .col-md-12{width: 100%;} 
-}
-
-
+/* ===================
+	custom grid
+	=====================*/
 
 @media screen and (min-width:960px){
   .col-sm-1{width: 8.33%;}
@@ -304,7 +272,22 @@ footer{
   .col-sm-12{width: 100%;} 
 }
 
-@media all and (max-width:640px){
+/* =========================
+responsive
+=========================== */
+
+
+@media all and (max-width:360px){
+    
+	.header-quote{
+			margin-top:10%;
+	}
+	h1{
+			font-size: 30px;
+	}
+}
+
+@media (min-width:360px) and (max-width:640px){
     body{
         font-size:8px;
     }
@@ -318,8 +301,7 @@ footer{
 }
 
 
-@media all and (max-width:960px){
-    
+@media (min-width:640px) and (max-width:960px){
     .header-quote{
         margin-top:20%;
     }
@@ -327,14 +309,3 @@ footer{
 }
 
 
-
-@media all and (max-width:360px){
-    
-    .header-quote{
-        margin-top:10%;
-       
-    }
-    h1{
-        font-size: 30px;
-    }
-}
