--- a/project/Day12/layout3/assets/stylesheet/style.css
+++ b/project/Day12/layout3/assets/stylesheet/style.css
@@ -107,7 +107,8 @@ content
 ============================ */
 .content{
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  order:1;
   grid-gap:20px;
   margin-top:20px;
 }
@@ -137,12 +138,9 @@ content
   height: auto;
 }
 
-
-.right{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 20px;
-}
+/* ============================
+content -middle
+============================ */
 .content-image{
   display: grid;
   background: white;
@@ -158,6 +156,9 @@ content
   height:300px;
   border-radius: 50%;
 }
+/* ============================
+content-right
+============================ */
 .content-desc{
   display: grid;
   grid-template-columns:1fr;
@@ -183,4 +184,44 @@ content
 }
 .h3-desc, .p-desc, .learn-more-desc{
   padding:10px;
+}
+
+
+/* ============================
+responsive
+============================ */
+@media (max-width:960px){
+  .content{
+    grid-template-columns: 1fr 1fr;
+  }
+  .left{
+    order:1;
+  }
+  .content-image{
+    order:3;
+  }
+  .content-desc{
+    order:2;
+  }
+
+}
+
+
+
+@media (max-width:520px){
+  .content{
+    grid-template-columns: 1fr;
+  }
+  .left{
+    order:1;
+  }
+  .content-image{
+    order:2;
+  }
+  .content-desc{
+    order:3;
+  }
+  a{
+    font-size: 16px;
+  }
 }
