--- a/styles_conference/assets/stylesheets/main.css
+++ b/styles_conference/assets/stylesheets/main.css
@@ -47,6 +47,14 @@ table {
 }
 
 
+/* ================================
+CUSTOM STYLES
+=============================== */
+body{
+  color:#888;
+  font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background: #293f50;
+}
 /* --------------------------------------
 --------------------------------------
 Grid 
@@ -63,12 +71,41 @@ Grid
   margin:0 auto;
   width: 960px;
 }
-.container{
+.container {
   padding-left: 30px;
   padding-right: 30px;
 }
-h1,h3,h4,h5,p{
+h1,h3,h4,h5,p {
   margin-bottom: 22px;
+}
+h1, h2, h3, h4 {
+  color: #648880;
+}
+h1 {
+  font-size: 36px;
+  line-height: 44px;
+}
+h2 {
+  font-size: 24px;
+  line-height: 44px;
+}
+h3 {
+  font-size: 21px;
+}
+h4 {
+  font-size: 18px;
+}
+h5 {
+  color: #a9b2b9;
+  font-size: 14px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+strong {
+  font-weight: 400;
+}
+cite, em {
+  font-style: italic;
 }
 .col-1-3{
   width:33.33%;
@@ -93,36 +130,100 @@ buttons
 
 .btn{
   border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
   display: inline-block;
+  font-weight: 400;
+  letter-spacing: .5px;
   margin: 0;
+  text-transform: uppercase;
 }
 .btn-alt{
-  border: 1px solid #dfe2e5;
+  border: 1px solid #fff;
   padding:10px 30px;
 }
+.btn-alt:hover {
+  background: #fff;
+  color: #648880;
+}
 
+/* ====================================
+Links
+==================================== */
+a:hover {
+  color: #a9b2b9;
+}
+a {
+  color: #648880;
+  text-decoration: none;
+}
+p a{
+  border-bottom: 1px solid #dfe2e5;
+}
 /*
   ========================================
   Primary header
   ========================================
 */
+.primary-header a,
+.primary-footer a {
+  color: #fff;
+}
+.primary-header a:hover,
+.primary-footer a:hover {
+  color: #648880;
+}
 
 .logo {
   float: left;
   border-top:4px solid #648880;
+  font-size: 48px;
+  font-weight: 100;
+  letter-spacing: .5px;
+  line-height: 44px;
   padding:40px 0px 22px 0px;
+  text-transform: uppercase;
+}
+.tagline {
+  margin: 66px 0 22px 0;
+  text-align: right;
+}
+.primary-nav {
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: .5px;
+  text-transform: uppercase;
+}
+.teaser a:hover h3 {
+  color: #a9b2b9;
 }
 
 
+
+/* ===============================
+NAVIGATION
+=============================== */
+.nav {
+  text-align: right;
+}
 
 
 /* ______________________________________________
 main__________________________________________ */
 
 .hero {
+  color: #fff;
+  line-height: 44px;
   padding: 22px 80px 66px 80px;
+  text-align: center;
 }
-
+.hero h2 {
+  font-size: 36px;
+}
+.hero p{
+  font-size: 24px;
+  font-weight: 100;
+}
 
 /*
   ========================================
@@ -141,9 +242,36 @@ main__________________________________________ */
   clear: both;
   *zoom: 1;
 }
+/* ==============================
+Rows
+============================== */
+.row, 
+.row-alt {
+  min-width: 960px;
+}
+.row {
+  background: #fff;
+  padding: 66px 0 44px 0;
+}
+.row-alt{
+  background: #cbe2c1;
+  background: -webkit-linear-gradient(to right, #a1d3b0, #f6f1d3);
+  background: -moz-linear-gradient(to right, #a1d3b0, #f6f1d3);
+  background: linear-gradient(to right, #a1d3b0, #f6f1d3);  
+  padding: 44px 0 22px 0;
+}
 
 
-
+/* ===============================
+Leads
+=============================== */
+.lead{
+  text-align: center;
+}
+.lead p {
+  font-size: 21px;
+  line-height: 33px;
+}
 /*
   ========================================
   Primary footer
@@ -152,9 +280,12 @@ main__________________________________________ */
 
 .primary-footer small {
   float: left;
+  font-weight: 400;
 }
 
 .primary-footer{
+  color: #648880;
+  font-size: 14px;
   padding-bottom: 44px;
   padding-top: 44px;
 }
