--- a/styles_conference/assets/stylesheets/main.css
+++ b/styles_conference/assets/stylesheets/main.css
@@ -206,6 +206,14 @@ NAVIGATION
 .nav {
   text-align: right;
 }
+.nav li {
+  display: inline-block;
+  margin: 0 10px;
+  vertical-align: top;
+}
+.nav li:last-child {
+  margin-right: 0;
+}
 
 
 /* ______________________________________________
