--- a/styles_conference/assets/stylesheets/main.css
+++ b/styles_conference/assets/stylesheets/main.css
@@ -1,5 +1,6 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 2. v2.0 | 20110126
-  License: none (public domain)
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
 */
 
 html, body, div, span, applet, object, iframe,
@@ -46,40 +47,121 @@ table {
   border-spacing: 0;
 }
 
+/*
+  ========================================
+  Custom styles
+  ========================================
+*/
 
-/* ================================
-CUSTOM STYLES
-=============================== */
-body{
-  color:#888;
-  font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+body {
   background: #293f50;
+  color: #888;
+  font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-/* --------------------------------------
---------------------------------------
-Grid 
---------------------------------------
--------------------------------------- */
 
-*,*:before,*:after{
+/*
+  ========================================
+  Grid
+  ========================================
+*/
+
+*,
+*:before,
+*:after {
   -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
 }
-
-.container,.grid{
-  margin:0 auto;
+.container,
+.grid {
+  margin: 0 auto;
   width: 960px;
 }
 .container {
   padding-left: 30px;
   padding-right: 30px;
 }
-h1,h3,h4,h5,p {
-  margin-bottom: 22px;
+.grid,
+.col-1-3,
+.col-2-3 {
+  padding-left: 15px;
+  padding-right: 15px;
 }
+.col-1-3,
+.col-2-3  {
+  display: inline-block;
+  vertical-align: top;
+}
+.col-1-3 {
+  width: 33.33%;
+}
+.col-2-3 {
+  width: 66.66%;
+}
+
+/*
+  ========================================
+  Clearfix
+  ========================================
+*/
+
+.group:before,
+.group:after {
+  content: "";
+  display: table;
+}
+.group:after {
+  clear: both;
+}
+.group {
+  clear: both;
+  *zoom: 1;
+}
+
+/*
+  ========================================
+  Rows
+  ========================================
+*/
+
+.row,
+.row-alt {
+  min-width: 960px;
+}
+.row {
+  background: #fff;
+  padding: 66px 0 44px 0;
+}
+/* ==============================
+Rows
+============================== */
+.row, 
+.row-alt {
+  min-width: 960px;
+}
+.row {
+  background: #fff;
+  padding: 66px 0 44px 0;
+}
+.row-alt {
+  background: #cbe2c1;
+  background: -webkit-linear-gradient(to right, #a1d3b0, #f6f1d3);
+  background: -moz-linear-gradient(to right, #a1d3b0, #f6f1d3);
+  background: linear-gradient(to right, #a1d3b0, #f6f1d3);
+  padding: 44px 0 22px 0;
+}
+
+/*
+  ========================================
+  Typography
+  ========================================
+*/
+
 h1, h2, h3, h4 {
   color: #648880;
+}
+h1, h3, h4, h5, p {
+  margin-bottom: 22px;
 }
 h1 {
   font-size: 36px;
@@ -104,67 +186,41 @@ h5 {
 strong {
   font-weight: 400;
 }
-cite, em {
+cite,
+em {
   font-style: italic;
 }
-.col-1-3{
-  width:33.33%;
+
+/*
+  ========================================
+  Leads
+  ========================================
+*/
+
+.lead {
+  text-align: center;
 }
-.col-2-3{
-  width:66.66%;
-}
-.col-1-3,.col-2-3{
-  display: inline-block;
-  vertical-align: top;
-}
-.grid,.col-1-3,.col-2-3{
-  padding-left: 15px;
-  padding-right: 15px;
+.lead p {
+  font-size: 21px;
+  line-height: 33px;
 }
 
-/* -------------------------------------------
--------------------------------------------
-buttons
--------------------------------------------
-------------------------------------------- */
+/*
+  ========================================
+  Links
+  ========================================
+*/
 
-.btn{
-  border-radius: 5px;
-  color: #fff;
-  cursor: pointer;
-  display: inline-block;
-  font-weight: 400;
-  letter-spacing: .5px;
-  margin: 0;
-  text-transform: uppercase;
-}
-.btn-alt{
-  border: 1px solid #fff;
-  padding:10px 30px;
-}
-.btn-alt:hover {
-  background: #fff;
-  color: #648880;
-}
-
-/* ====================================
-Links
-==================================== */
-a:hover {
-  color: #a9b2b9;
-}
 a {
   color: #648880;
   text-decoration: none;
 }
-p a{
+a:hover {
+  color: #a9b2b9;
+}
+p a {
   border-bottom: 1px solid #dfe2e5;
 }
-/*
-  ========================================
-  Primary header
-  ========================================
-*/
 .primary-header a,
 .primary-footer a {
   color: #fff;
@@ -174,14 +230,45 @@ p a{
   color: #648880;
 }
 
+/*
+  ========================================
+  Buttons
+  ========================================
+*/
+
+.btn {
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 400;
+  letter-spacing: .5px;
+  margin: 0;
+  text-transform: uppercase;
+}
+.btn-alt {
+  border: 1px solid #fff;
+  padding: 10px 30px;
+}
+.btn-alt:hover {
+  background: #fff;
+  color: #648880;
+}
+
+/*
+  ========================================
+  Primary header
+  ========================================
+*/
+
 .logo {
+  border-top: 4px solid #648880;
   float: left;
-  border-top:4px solid #648880;
   font-size: 48px;
   font-weight: 100;
   letter-spacing: .5px;
   line-height: 44px;
-  padding:40px 0px 22px 0px;
+  padding: 40px 0 22px 0;
   text-transform: uppercase;
 }
 .tagline {
@@ -194,15 +281,30 @@ p a{
   letter-spacing: .5px;
   text-transform: uppercase;
 }
-.teaser a:hover h3 {
-  color: #a9b2b9;
+
+/*
+  ========================================
+  Primary footer
+  ========================================
+*/
+
+.primary-footer {
+  color: #648880;
+  font-size: 14px;
+  padding-bottom: 44px;
+  padding-top: 44px;
+}
+.primary-footer small {
+  float: left;
+  font-weight: 400;
 }
 
+/*
+  ========================================
+  Navigation
+  ========================================
+*/
 
-
-/* ===============================
-NAVIGATION
-=============================== */
 .nav {
   text-align: right;
 }
@@ -215,9 +317,11 @@ NAVIGATION
   margin-right: 0;
 }
 
-
-/* ______________________________________________
-main__________________________________________ */
+/*
+  ========================================
+  Home
+  ========================================
+*/
 
 .hero {
   color: #fff;
@@ -228,72 +332,40 @@ main__________________________________________ */
 .hero h2 {
   font-size: 36px;
 }
-.hero p{
+.hero p {
   font-size: 24px;
   font-weight: 100;
 }
+.teaser a:hover h3 {
+  color: #a9b2b9;
+}
+.teaser img {
+  border-radius: 5px;
+  display: block;
+  margin-bottom: 22px;
+  max-width: 100%
+}
 
 /*
   ========================================
-  Clearfix
+  Speakers
   ========================================
 */
-.group:before,
-.group:after {
-  content: "";
-  display: table;
-}
-.group:after {
-  clear: both;
-}
-.group {
-  clear: both;
-  *zoom: 1;
-}
-/* ==============================
-Rows
-============================== */
-.row, 
-.row-alt {
-  min-width: 960px;
-}
-.row {
-  background: #fff;
-  padding: 66px 0 44px 0;
-}
-.row-alt{
-  background: #cbe2c1;
-  background: -webkit-linear-gradient(to right, #a1d3b0, #f6f1d3);
-  background: -moz-linear-gradient(to right, #a1d3b0, #f6f1d3);
-  background: linear-gradient(to right, #a1d3b0, #f6f1d3);  
-  padding: 44px 0 22px 0;
-}
 
-
-/* ===============================
-Leads
-=============================== */
-.lead{
+.speaker {
+  margin-bottom: 44px;
+}
+.speaker-info {
+  border: 1px solid #dfe2e5;
+  border-radius: 5px;
+  margin-top: 88px;
+  padding-bottom: 22px;
   text-align: center;
 }
-.lead p {
-  font-size: 21px;
-  line-height: 33px;
-}
-/*
-  ========================================
-  Primary footer
-  ========================================
-*/
-
-.primary-footer small {
-  float: left;
-  font-weight: 400;
+.speaker-info img {
+  border-radius: 50%;
+  height: 130px;
+  margin: -66px 0 22px 0;
+  vertical-align: top;
 }
 
-.primary-footer{
-  color: #648880;
-  font-size: 14px;
-  padding-bottom: 44px;
-  padding-top: 44px;
-}
