Add style conference layout

--- a/project/Day22/layout1/assets/stylesheet/style.css
+++ b/project/Day22/layout1/assets/stylesheet/style.css
@@ -189,7 +189,7 @@ input, textarea{
 main - footer
 ====================== */
 .footer{
-  background: black;
+  background: black;padding: 20px 0;
 }
 iframe {
   padding: 2rem;
