--- a/project/final_project/assets/stylesheet/style.css
+++ b/project/final_project/assets/stylesheet/style.css
@@ -490,6 +490,44 @@ a {
 .fa-arrow-right {
   right: 30px !important; }
 
+.builder {
+  border: none;
+  background: green;
+  padding: 20px 40px;
+  position: relative;
+  transition: background linear 150ms; }
+
+.bubble1, .bubble2 {
+  width: 20px;
+  height: 20px;
+  background: yellow;
+  border-radius: 50%;
+  position: absolute;
+  display: none; }
+
+.builder:hover {
+  background: yellow; }
+  .builder:hover .bubble1 {
+    display: inline-block;
+    animation: slide 200ms linear; }
+  .builder:hover .bubble2 {
+    display: inline-block;
+    animation: slide2 200ms linear; }
+
+@keyframes slide {
+  0% {
+    left: 0;
+    top: 30%; }
+  100% {
+    left: 50%;
+    top: 30%; } }
+@keyframes slide2 {
+  0% {
+    right: 0%;
+    top: 30%; }
+  100% {
+    right: 50%;
+    top: 30%; } }
 .nav {
   padding: 30px 0; }
 
