add styles to scss file in final layout

--- a/project/final_project/assets/stylesheet/style.css
+++ b/project/final_project/assets/stylesheet/style.css
@@ -476,6 +476,14 @@ a {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%); }
+  .hero__content .hero__heading {
+    font-size: 50px;
+    color: white; }
+  .hero__content .hero__text {
+    font-size: 1.2em;
+    color: white;
+    margin: 2em 0;
+    line-height: 1.5; }
 
 .arrow {
   position: absolute;
@@ -492,27 +500,64 @@ a {
 
 .builder {
   border: none;
-  background: green;
-  padding: 20px 40px;
+  background: #5cb95c;
+  padding: 30px 30px;
   position: relative;
-  transition: background linear 150ms; }
+  transition: all .3s linear; }
+  .builder a {
+    color: white;
+    font-size: 1.5em;
+    font-weight: bold;
+    text-transform: uppercase; }
+
+.intense {
+  margin-left: 1rem;
+  padding: 28px 28px;
+  background: transparent;
+  border: 2px solid white;
+  border-radius: 4px; }
 
 .bubble1, .bubble2 {
-  width: 20px;
-  height: 20px;
-  background: yellow;
+  width: 30px;
+  height: 30px;
+  background: skyblue;
   border-radius: 50%;
   position: absolute;
   display: none; }
 
+.bubble3, .bubble4 {
+  width: 30px;
+  height: 30px;
+  background: skyblue;
+  border-radius: 50%;
+  position: absolute;
+  display: none; }
+
+.bubble3, .bubble4 {
+  background: white; }
+
+.bubble1, .bubble3 {
+  left: 0;
+  top: 30%; }
+
+.bubble2, .bubble4 {
+  right: 0;
+  top: 30%; }
+
 .builder:hover {
-  background: yellow; }
-  .builder:hover .bubble1 {
+  background: skyblue; }
+  .builder:hover .bubble1, .builder:hover .bubble3 {
     display: inline-block;
-    animation: slide 200ms linear; }
-  .builder:hover .bubble2 {
+    animation: slide 250ms linear;
+    left: 0; }
+  .builder:hover .bubble2, .builder:hover .bubble4 {
     display: inline-block;
     animation: slide2 200ms linear; }
+
+.intense:hover {
+  background: white; }
+  .intense:hover a {
+    color: black; }
 
 @keyframes slide {
   0% {
@@ -531,6 +576,13 @@ a {
 .nav {
   padding: 30px 0; }
 
+.sub-menu2-1,
+.sub-menu2-2,
+.sub-menu2-3,
+.sub-menu2-4,
+.sub-menu2-5 {
+  display: none; }
+
 .menu__item {
   margin-left: 30px;
   position: relative; }
@@ -542,6 +594,11 @@ a {
       padding-bottom: 0; }
   .menu__item:hover .sub-menu {
     display: inline-block; }
+
+.primary-drop:hover .place {
+  display: inline-block;
+  position: absolute;
+  left: 100%; }
 
 .menu__link {
   color: #fff;
@@ -594,25 +651,52 @@ a {
     cursor: pointer;
     text-transform: uppercase; }
 
-.sub-menu {
+.sub-menu,
+.sub-menu2-1,
+.sub-menu2-2,
+.sub-menu2-3,
+.sub-menu2-4,
+.sub-menu2-5 {
   position: absolute;
   width: 200px;
   z-index: 1;
   display: none;
   padding-top: 30px; }
-  .sub-menu a {
+  .sub-menu a,
+  .sub-menu2-1 a,
+  .sub-menu2-2 a,
+  .sub-menu2-3 a,
+  .sub-menu2-4 a,
+  .sub-menu2-5 a {
     color: #fff;
-    font-size: 20px;
+    font-size: 1em;
     padding: 10px 10px; }
 
 .sub-menu__list {
   background: #000;
   border-top: 2px solid #42b574; }
 
+.top {
+  margin-top: -33%; }
+
 .theme {
   padding-top: 80px;
   position: relative;
   height: 600px; }
+
+.theme__heading {
+  font-size: 2rem;
+  margin: 2rem 0; }
+  .theme__heading .flexible {
+    background: linear-gradient(0deg, #42b574 0%, #84c450 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; }
+
+.theme__text {
+  color: #434345;
+  font-size: 1rem; }
+  .theme__text .customer {
+    color: skyblue; }
 
 .theme__img {
   position: absolute; }
@@ -635,7 +719,8 @@ a {
 .feature-header {
   padding: 60px 0;
   background: linear-gradient(to right, #42b574, #84c450);
-  position: relative; }
+  position: relative;
+  color: white; }
   .feature-header:after {
     content: '';
     height: 0;
@@ -650,8 +735,14 @@ a {
     z-index: 1; }
 
 .feature-header__intro {
-  width: 50%;
-  margin: 0 auto; }
+  width: 70%;
+  margin: 0 auto;
+  font-size: 1rem;
+  line-height: 1.5; }
+
+.feature-header__heading {
+  font-size: 2rem;
+  margin: 1rem; }
 
 .features {
   position: relative;
@@ -671,7 +762,7 @@ a {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   color: #fff;
-  grid-gap: 30px; }
+  grid-gap: 3rem; }
   .feature__container i {
     font-size: 30px; }
 
@@ -690,6 +781,14 @@ a {
   justify-content: center;
   align-items: center; }
 
+.features__heading {
+  font-size: 1.5rem;
+  margin: 1rem 0; }
+
+.features__text {
+  font-size: 1rem;
+  line-height: 1.5; }
+
 .ad {
   padding: 60px 0;
   background: linear-gradient(to right, cyan, #42b574, #84c450); }
@@ -700,10 +799,38 @@ a {
   justify-content: center; }
 
 .ad__heading {
-  margin-right: 40px; }
+  margin-right: 40px;
+  font-size: 2.5rem;
+  color: white; }
+
+.ad__button {
+  padding: 1rem;
+  background: transparent;
+  border: 2px solid white;
+  border-radius: 4px;
+  font-size: 1.7rem;
+  color: white; }
+  .ad__button .fas {
+    margin-right: .5rem; }
 
 .about {
   padding: 60px 0; }
+
+.about__heading {
+  font-size: 2rem;
+  font-weight: 400; }
+
+.about__hr {
+  margin: 1rem 0;
+  height: 2px;
+  width: 80px;
+  background: linear-gradient(90deg, #8668ad 0%, #55bbeb 100%); }
+
+.about__text {
+  font-size: 1rem;
+  padding: 1rem;
+  padding-left: 0;
+  line-height: 1.5; }
 
 .data {
   padding: 60px 0;
@@ -714,5 +841,132 @@ a {
   grid-template-columns: repeat(4, auto);
   grid-gap: 30px;
   color: #fff; }
+
+.data__item .data__heading {
+  font-size: 3rem;
+  margin-bottom: 2rem;
+  background: linear-gradient(90deg, #8668ad 0%, #55bbeb 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; }
+.data__item .data__hr {
+  width: 50px; }
+.data__item p {
+  margin-top: 2rem;
+  font-size: 1.5rem; }
+
+.event .event-top {
+  text-align: center;
+  margin: 3rem 0; }
+  .event .event-top .event-figure {
+    width: 90%;
+    height: auto; }
+  .event .event-top h1 {
+    color: #2c2727;
+    font-size: 2.5rem; }
+
+.event__more {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px; }
+
+.event__list {
+  display: grid;
+  grid-gap: 20px;
+  margin: 20px;
+  grid-template-columns: auto 1fr; }
+  .event__list .far {
+    font-size: 3rem; }
+  .event__list h3 {
+    font-size: 1.5rem;
+    margin-bottom: 1rem 0; }
+  .event__list p {
+    font-size: 1rem;
+    line-height: 1.5; }
+
+.event__bottom {
+  background: #000;
+  margin-top: 4rem;
+  text-align: center;
+  position: relative; }
+  .event__bottom .event__button {
+    border: 1px solid white;
+    border-radius: 6px;
+    background: transparent;
+    color: white;
+    margin: 2rem;
+    padding: 1rem 2rem;
+    font-size: 1rem;
+    font-weight: bold; }
+
+.black__triangle {
+  height: 0;
+  width: 0;
+  border: 30px solid transparent;
+  border-bottom: 30px solid black;
+  position: absolute;
+  top: -60px;
+  left: calc(50% - 10px); }
+
+.intense__theme h3 {
+  font-size: 3rem;
+  margin: 1rem 0; }
+.intense__theme h4 {
+  font-size: 2rem;
+  margin: 1rem; }
+  .intense__theme h4 .intense__span {
+    background: linear-gradient(0deg, #42b574 0%, #84c450 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; }
+
+.team__header h3 {
+  font-size: 3rem; }
+.team__header p {
+  margin: 1rem 0;
+  font-size: 1.2rem; }
+
+.team__hr {
+  display: inline-block;
+  width: 5%;
+  height: 2px;
+  background: linear-gradient(0deg, #42b574 0%, #84c450 100%); }
+
+.team__member {
+  margin-top: 2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 30px; }
+  .team__member .member .member__hr {
+    width: 20%; }
+  .team__member .member .member__list {
+    height: 140px;
+    width: 140px;
+    border-radius: 50%; }
+  .team__member .member h3 {
+    font-size: 1.5rem;
+    margin: .5rem 0; }
+  .team__member .member h5 {
+    color: skyblue;
+    font-size: 1rem;
+    margin: .5rem 0; }
+
+.media__content {
+  max-width: 80%;
+  margin: 1.5rem auto;
+  display: flex;
+  justify-content: space-around; }
+
+.media__icon {
+  position: relative;
+  display: inline-block;
+  color: white;
+  background: #2b2929;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%; }
+  .media__icon .fab {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
 
 /*# sourceMappingURL=style.css.map */
