--- a/project/final_project/assets/stylesheet/style.scss
+++ b/project/final_project/assets/stylesheet/style.scss
@@ -24,6 +24,16 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	.hero__heading {
+		font-size: 50px;
+		color:white;
+	}
+	.hero__text {
+		font-size: 1.2em;
+		color:white;
+		margin: 2em 0;
+		line-height: 1.5;
+	}
 }
 .arrow {
 	position: absolute;
@@ -40,32 +50,69 @@
 }
 .builder {
 	border: none;
-	background: green;
-	padding: 20px 40px;
+	background: rgb(92, 185, 92);
+	padding: 30px 30px;
 	position: relative;
-	transition: background linear 150ms;
+	transition: all .3s linear;
+	a {
+		color:white;
+		font-size: 1.5em;
+		font-weight: bold;
+		text-transform: uppercase;
+	}
+}
+.intense {
+	margin-left: 1rem;
+	padding: 28px 28px;
+	background: transparent;
+	border:2px solid white;
+	border-radius: 4px;
 }
 .bubble1, .bubble2 {
-	width:20px;
-	height: 20px;
-	background: yellow;
+	width:30px;
+	height: 30px;
+	background: skyblue;
 	border-radius: 50%;
 	position: absolute;
 	display: none;
-
 }
-
+.bubble3, .bubble4 {
+	width:30px;
+	height: 30px;
+	background: skyblue;
+	border-radius: 50%;
+	position: absolute;
+	display: none;
+}
+.bubble3, .bubble4 {
+	background: white;
+}
+.bubble1, .bubble3 {
+	left: 0;
+	top:30%;
+}
+.bubble2, .bubble4 {
+	right:0;
+	top:30%;
+}
 .builder:hover {
-	.bubble1 {
+	.bubble1, .bubble3 {
 		display: inline-block;
-		animation: slide 200ms linear;
+		animation: slide 250ms linear;
+		left: 0;
 	}
-	.bubble2 {
+	.bubble2, .bubble4 {
 		display: inline-block;
 		animation: slide2 200ms linear;
 	}
-	background: yellow;
+	background: skyblue;
 } 
+.intense:hover {
+	background: white;
+	a {
+		color: black;
+	}
+}
 @keyframes slide {
 	0% {
 		left: 0;
@@ -95,6 +142,13 @@
 .nav, .menu {
 	@extend %flex;
 }
+.sub-menu2-1,
+.sub-menu2-2,
+.sub-menu2-3,
+.sub-menu2-4,
+.sub-menu2-5 {
+	display: none;
+}
 .menu__item {
 	margin-left: 30px;
 	position: relative;
@@ -108,6 +162,13 @@
 	}
 	&:hover .sub-menu {
 		display: inline-block;
+	}
+}
+.primary-drop:hover {
+	.place{
+		display: inline-block;
+		position: absolute;
+		left:100%;	
 	}
 }
 .menu__link {
@@ -172,7 +233,12 @@
 	}
 }
 
-.sub-menu {
+.sub-menu,
+.sub-menu2-1,
+.sub-menu2-2,
+.sub-menu2-3,
+.sub-menu2-4,
+.sub-menu2-5 {
 	position: absolute;
 	width: 200px;
 	z-index: 1;
@@ -180,7 +246,7 @@
 	padding-top: 30px;
 	a {
 		color: #fff;
-		font-size: 20px;
+		font-size: 1em;
 		padding: 10px 10px;
 	}
 }
@@ -188,7 +254,9 @@
 	background: #000;
 	border-top: 2px solid $primary-color;
 }
-
+.top{
+	margin-top: -33%;
+}
 // ====================
 // Theme
 // ==================== 
@@ -196,6 +264,23 @@
 	padding-top: 80px;
 	position: relative;
 	height: 600px;
+}
+.theme__heading {
+	font-size: 2rem;
+	margin: 2rem 0;
+	.flexible {
+		background: linear-gradient(0deg, #42b574 0%, #84c450 100%);	
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+	}
+}
+
+.theme__text {
+	color: $secondary-text-color;
+	font-size: 1rem;
+	.customer {
+		color: skyblue;
+	}
 }
 .theme__img {
 	position: absolute;
@@ -223,6 +308,7 @@
 	padding: 60px 0;
 	background: linear-gradient(to right, $primary-color, $secondary-color);
 	position: relative;
+	color: white;
 	&:after {
 		content: '';
 		height: 0;
@@ -238,10 +324,15 @@
 	}
 }
 .feature-header__intro {
-	width: 50%;
+	width: 70%;
 	margin: 0 auto;
+	font-size: 1rem;
+	line-height: 1.5;
 }
-
+.feature-header__heading {
+	font-size: 2rem;
+	margin: 1rem;
+}
 // ====================
 // Features
 // ====================
@@ -263,7 +354,7 @@
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
 	color: $primary-text-color;
-	grid-gap: 30px;
+	grid-gap: 3rem;
 	i {
 		font-size: 30px;
 	}
@@ -283,7 +374,14 @@
 	justify-content: center;
 	align-items: center;
 }
-
+.features__heading {
+	font-size: 1.5rem;
+	margin: 1rem 0;
+}
+.features__text {
+	font-size: 1rem;
+	line-height: 1.5;
+}
 .ad {
 	padding: 60px 0;
 	background: linear-gradient(to right, cyan, $primary-color, $secondary-color);
@@ -295,14 +393,43 @@
 }
 .ad__heading {
 	margin-right: 40px;
+	font-size: 2.5rem;
+	color:white;
 }
-
+.ad__button {
+	padding: 1rem;
+	background: transparent;
+	border: 2px solid white;
+	border-radius: 4px;
+	font-size: 1.7rem;
+	color:white;
+	.fas {
+		margin-right: .5rem;
+	}
+}
 // ====================
 // About
 // ====================
 .about {
 	padding: 60px 0;
 }
+.about__heading {
+	font-size: 2rem;
+	font-weight: 400;
+}
+.about__hr {
+	margin: 1rem 0;
+	height:2px;
+	width:80px;
+	background: linear-gradient(90deg, #8668ad 0%, #55bbeb 100%);
+}
+.about__text {
+	font-size: 1rem;
+	padding: 1rem;
+	padding-left: 0;
+	line-height: 1.5;
+}
+
 
 // ====================
 // Data
@@ -317,9 +444,181 @@
 	grid-gap: 30px;
 	color: $primary-text-color;
 }
+.data__item{
+	.data__heading {
+		font-size: 3rem;
+		margin-bottom: 2rem;
+		background: linear-gradient(90deg, #8668ad 0%, #55bbeb 100%);
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+	}
+	.data__hr {
+		width:50px;
+	}
+	p {
+		margin-top: 2rem;
+		font-size: 1.5rem;
+	}
+}
+
+// ====================
+// Event
+// ====================
+.event {
+	.event-top {
+		text-align: center;
+		margin: 3rem 0;
+		.event-figure {
+			width:90%;
+			height:auto;
+		}
+		h1 {
+			color: rgb(44, 39, 39);
+			font-size: 2.5rem;
+		}
+	}
+}
+
+// ====================
+// Event more
+// ====================
+.event__more {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-gap: 20px;
+}
+.event__list {
+	display: grid;
+	grid-gap: 20px;
+	margin: 20px;
+	grid-template-columns: auto 1fr;
+	.far {
+		font-size: 3rem;
+	}
+	h3 {
+		font-size: 1.5rem;
+		margin-bottom: 1rem 0;
+	}
+	p {
+		font-size: 1rem;
+		line-height: 1.5;
+	}
+}
 
 
+// ====================
+// Event bottom
+// ====================
+.event__bottom {
+	background: #000;
+	margin-top: 4rem;
+	text-align: center;
+	position: relative;
+	.event__button {
+		border:1px solid white;
+		border-radius: 6px;
+		background: transparent;
+		color: white;
+		margin: 2rem;
+		padding: 1rem 2rem;
+		font-size: 1rem;
+		font-weight: bold;
+	}
+}
+.black__triangle {
+	height: 0;
+	width: 0;
+	border: 30px solid transparent;
+	border-bottom: 30px solid black;
+	position: absolute;
+	top:-60px;
+	left: calc(50% - 10px);
+}
 
+// ====================
+// Portfolio
+// ====================
+.intense__theme {
+	h3 {
+		font-size: 3rem;
+		margin: 1rem 0;
+	}
+	h4 {
+		font-size: 2rem;
+		margin: 1rem;
+		.intense__span {
+			background: linear-gradient(0deg, #42b574 0%, #84c450 100%);	
+			-webkit-background-clip: text;
+			-webkit-text-fill-color: transparent;
+		}
+	}
+}
 
+// ====================
+// Team member
+// ====================
+.team__header {
+	h3 {
+		font-size: 3rem;
+	}
+	p {
+		margin: 1rem 0;
+		font-size: 1.2rem;
+	}
+}
+.team__hr {
+	display: inline-block;
+	width: 5%;
+	height: 2px;
+	background: linear-gradient(0deg, #42b574 0%, #84c450 100%);	
+}
 
-
+.team__member {
+	margin-top: 2rem;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	grid-gap:30px;
+	.member {
+		.member__hr {
+			width: 20%;
+		}
+		.member__list {
+			height: 140px;
+			width: 140px;
+			border-radius: 50%;
+		}
+		h3 {
+			font-size: 1.5rem;
+			margin: .5rem 0;
+		}
+		h5 {
+			color: skyblue;
+			font-size: 1rem;
+			margin: .5rem 0;
+		}		
+	}
+}
+.media__content {
+	max-width: 80%;
+	margin: 1.5rem auto;
+	display: flex;
+	justify-content: space-around;
+}
+.media__icon {
+	position: relative;
+	display: inline-block;
+	color: white;
+	background: rgb(43, 41, 41);
+	height: 50px;
+	width: 50px;
+	border-radius: 50%;
+	.fab {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+	}
+}
+// ====================
+// client saying
+// ====================
