--- a/project/final_project/assets/stylesheet/style.css
+++ b/project/final_project/assets/stylesheet/style.css
@@ -969,4 +969,96 @@ a {
     left: 50%;
     transform: translate(-50%, -50%); }
 
+.clients {
+  margin: 0 auto;
+  padding: 3rem 0;
+  background: url(../media/background-03-1920x900.jpg); }
+  .clients h2 {
+    font-size: 2rem; }
+  .clients .client__hr {
+    display: inline-block;
+    width: 10%;
+    height: 2px;
+    background: black; }
+  .clients p {
+    width: 80%;
+    margin: 0 auto;
+    font-size: 1rem; }
+  .clients h3 {
+    margin: 2rem 0;
+    color: skyblue;
+    font-size: 1rem; }
+
+.client__image {
+  margin: 2rem 0; }
+
+.client__img__list {
+  width: 140px;
+  height: 140px;
+  border-radius: 50%; }
+
+.footer {
+  display: grid;
+  padding-top: 2rem;
+  grid-template-columns: 2fr 3fr 1fr 2fr;
+  grid-gap: 30px;
+  background: #202020; }
+
+.footer__header {
+  margin-left: 1rem; }
+  .footer__header h2 {
+    font-size: 2rem;
+    color: white;
+    margin-bottom: 1rem; }
+  .footer__header p {
+    color: #857e7e; }
+  .footer__header .media__content {
+    justify-content: space-between;
+    max-width: 100%; }
+
+.newsletter h3 {
+  font-size: 1.5rem;
+  color: white;
+  margin-bottom: 2rem; }
+.newsletter p {
+  font-size: 1rem;
+  color: white;
+  line-height: 1.5; }
+.newsletter .subscribe {
+  margin: 1rem 0; }
+  .newsletter .subscribe .media__icon {
+    border-radius: 0;
+    height: auto;
+    width: 30px;
+    position: relative; }
+    .newsletter .subscribe .media__icon .fas {
+      position: absolute;
+      font-size: 2rem;
+      margin-top: -4px;
+      color: white;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%); }
+  .newsletter .subscribe input {
+    height: 2.1rem; }
+  .newsletter .subscribe .subscribe__btn {
+    border: none;
+    color: white;
+    background: #4cb34c;
+    padding: .6rem 1rem; }
+
+.useful__links li {
+  color: green;
+  font-size: 1rem;
+  list-style-type: disc;
+  padding: 1rem 0; }
+  .useful__links li a {
+    color: white;
+    font-size: 1rem; }
+
+.latest__news h3 {
+  font-size: 1rem;
+  color: white;
+  margin-bottom: 2rem; }
+
 /*# sourceMappingURL=style.css.map */
