--- a/project/final_project/assets/stylesheet/style.css
+++ b/project/final_project/assets/stylesheet/style.css
@@ -1051,7 +1051,7 @@ a {
   color: green;
   font-size: 1rem;
   list-style-type: disc;
-  padding: 1rem 0; }
+  padding-bottom: 1.5rem; }
   .useful__links li a {
     color: white;
     font-size: 1rem; }
@@ -1060,5 +1060,11 @@ a {
   font-size: 1rem;
   color: white;
   margin-bottom: 2rem; }
+
+.footer__bottom {
+  background: #202020;
+  padding: 2rem 1rem;
+  font-size: 1rem;
+  color: #444242; }
 
 /*# sourceMappingURL=style.css.map */
