--- a/project/final_project/assets/stylesheet/style.scss
+++ b/project/final_project/assets/stylesheet/style.scss
@@ -729,7 +729,7 @@
 		color: green;
 		font-size: 1rem;
 		list-style-type: disc;
-		padding: 1rem 0;
+		padding-bottom: 1.5rem;
 		a {
 			color:white;
 			font-size: 1rem;
@@ -742,4 +742,16 @@
 		color: white;
 		margin-bottom: 2rem;
 	}
+}
+
+
+
+// ====================
+// footer- bottom
+// ====================
+.footer__bottom {
+	background: rgb(32, 32, 32);
+	padding: 2rem 1rem;
+	font-size: 1rem;
+	color: rgb(68, 66, 66);
 }
