add responsive part in final project

--- a/project/final_project/assets/stylesheet/style.css
+++ b/project/final_project/assets/stylesheet/style.css
@@ -804,12 +804,14 @@ a {
   color: white; }
 
 .ad__button {
-  padding: 1rem;
+  padding: 1rem 2rem;
   background: transparent;
   border: 2px solid white;
   border-radius: 4px;
   font-size: 1.7rem;
   color: white; }
+  .ad__button:hover {
+    color: black; }
   .ad__button .fas {
     margin-right: .5rem; }
 
@@ -896,7 +898,11 @@ a {
     margin: 2rem;
     padding: 1rem 2rem;
     font-size: 1rem;
-    font-weight: bold; }
+    font-weight: bold;
+    transition: background linear 250ms; }
+    .event__bottom .event__button:hover {
+      background: white;
+      color: black; }
 
 .black__triangle {
   height: 0;
@@ -1013,6 +1019,18 @@ a {
     left: 50%;
     transform: translate(-50%, -50%); }
 
+.facebook:hover {
+  background: #0956b5; }
+
+.twitter:hover {
+  background: #28d4f9; }
+
+.google:hover {
+  background: #f96a23; }
+
+.linkedin:hover {
+  background: #0E7EB5; }
+
 .clients {
   margin: 0 auto;
   padding: 3rem 0;
@@ -1029,6 +1047,12 @@ a {
     margin: 0 auto;
     font-size: 1rem; }
   .clients h3 {
+    margin: 2rem 0;
+    font-family: 'Yesteryear', cursive;
+    font-size: 2rem;
+    font-weight: bold;
+    color: white; }
+  .clients h4 {
     margin: 2rem 0;
     color: skyblue;
     font-size: 1rem; }
@@ -1137,7 +1161,11 @@ a {
     justify-self: center; }
 
   .footer {
-    grid-template-columns: 1fr;
-    text-align: center; } }
+    grid-template-columns: 1fr 1fr;
+    text-align: center; }
+    .footer .footer__header {
+      grid-column: span 2; }
+    .footer .newsletter {
+      grid-column: span 2; } }
 
 /*# sourceMappingURL=style.css.map */
