finalise final porject 2

--- a/practice/Day27/layout3/assets/media/Final project2_files/style.css
+++ b/practice/Day27/layout3/assets/media/Final project2_files/style.css
@@ -93,7 +93,7 @@ a {
 .img-responsive {
   display: block;
   width: 100%;
-  height: 100px; }
+  height: auto; }
 
 .clearfix {
   *zoom: 1; }
@@ -119,26 +119,21 @@ a {
 
 .heading {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); }
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); }
 
-.header__logo {
-  position: relative; }
-  .header__logo .logo__image {
-    width: 100%;
-    height: 100%; }
-  .header__logo h1 {
-    position: absolute;
-    top: 5%;
-    left: 15%;
-    font-size: 3rem; }
+.header__logo .logo__image {
+  width: 100%; }
+.header__logo h1 {
+  font-size: 3rem; }
 
 .header__details {
-  background: #f5d4ba; }
+  background: #f5d4ba;
+  position: relative; }
   .header__details ul {
     display: flex;
     justify-content: space-between;
     width: 80%;
-    margin: 20px auto 0 auto; }
+    margin: 20px auto; }
     .header__details ul li a {
       font-size: 1rem;
       text-transform: uppercase;
@@ -146,8 +141,8 @@ a {
     .header__details ul li:first-child a {
       color: #e0aa47; }
   .header__details .header__desc {
-    padding: 2rem 20px;
-    position: relative;
+    padding: 0 20px;
+    position: absolute;
     top: 50%;
     transform: translateY(-50%);
     color: #524646; }
@@ -171,7 +166,7 @@ a {
 
 .about__section {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); }
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); }
 
 .about {
   padding: 30px 30px; }
@@ -187,7 +182,7 @@ a {
 
 .my__skill {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); }
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); }
   .my__skill .about-img {
     height: 100%; }
   .my__skill .skill__details {
@@ -213,13 +208,9 @@ a {
     .my__skill .skill__details .skill__list {
       margin: 30px 0; }
 
-.skill {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); }
-
 .skill__item {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   color: #d6caca; }
   .skill__item i {
     font-size: 3rem;
@@ -233,12 +224,8 @@ a {
     padding: 0 15px;
     margin: 2rem 0; }
 
-.experience2 {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr); }
-
-.img-responsive {
-  height: 100%; }
+.experience__image {
+  background: url(../media/experience-img.jpg); }
 
 .experience {
   padding: 3rem;
@@ -256,12 +243,8 @@ a {
 .education__image {
   background: url(../media/education-img.jpg); }
 
-.address__section {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr); }
-
 .form {
-  padding: 3rem;
+  padding: 2rem;
   color: white; }
   .form h2 {
     font-size: 2rem; }
@@ -288,9 +271,8 @@ a {
 
 .address {
   display: grid;
-  grid-template-columns: repeat(2, 1fr); }
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); }
   .address .address__image {
-    width: 100%;
     height: 100%; }
   .address .address__details {
     padding: 2rem;
@@ -306,8 +288,9 @@ a {
     .address .address__details .fas, .address .address__details .fal {
       margin-right: 1rem; }
 
-.map__section {
-  padding: 2rem; }
+.map {
+  padding: 2rem;
+  grid-column: span 2; }
 
 .footer {
   background: white;
@@ -327,26 +310,12 @@ a {
       .footer .media__icon i:hover {
         color: skyblue; }
 
-@media (max-width: 1020px) {
+@media (max-width: 960px) {
   :root {
     font-size: 12px; }
 
-  .address__section {
-    grid-template-columns: 1fr; }
-
-  .address {
-    grid-template-columns: 1fr; }
-
-  .google__map {
-    height: 300px; }
-
-  .header__details ul li a {
-    font-size: 10px; } }
-@media (max-width: 720px) {
-  .experience2 {
-    grid-template-columns: 1fr; } }
-@media (max-width: 520px) {
-  .header__details ul {
-    display: none; } }
+  .container {
+    grid-template-columns: 100%;
+    grid-auto-flow: row; } }
 
 /*# sourceMappingURL=style.css.map */
